# TREADING_BOT

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
bot/: client.py  loging_config.py  orders.py  validators.py
